Fix scrollspy and offset content from fixed navbar when jumping to headings

--- a/site/assets/3.0/scss/site.scss
+++ b/site/assets/3.0/scss/site.scss
@@ -22,6 +22,12 @@ html {
   --bs-offcanvas-width: 300px;
 }
 
+// Offset content from fixed navbar when jumping to headings
+.component-showcase > :target {
+  padding-top: 5rem;
+  margin-top: -5rem;
+}
+
 .ms-toc {
   .nav-pills .nav-link {
     font-size: .875rem;
